2013-07-06 Massimo Manghi <mxmanghi@apache.org>
    * src/parser/parserPkgInit.c: commands are created through the RIVET_OBJ_CMD macro

2013-07-05 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac: changed the default path for installation dir 
    * doc/xml/commands.xml: add manual page for command ::rivet::xml

2013-06-28 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c,rivetCore.c: command 'parsestr' to parse templates stored
    in Tcl objects coded
    * doc/Makefile.am: 'clean' target made a little terser

2013-06-26 Massimo Manghi <mxmanghi@apache.org>
    * Makefile.am: forcing install/unistall targets to recreate pkgIndex.tcl
    in order to have a coherent directory of packages actually available

2013-06-24 Massimo Manghi <mxmanghi@apache.org>
    * INSTALL: It must be made explicit installation is a two stage operation now

2013-06-24 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/session/session-class.tcl: two new methods 'load' (loads a
    whole package data for a given package and session) and 'clear' (it deletes either 
    a whole package or a single data like for a session)

2013-06-22 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: cleanup of unused code in mod_rivet.c. Adding comments
    to undocumented functions
    * src/parser/rivetParse.c: New TODO comment added 

2013-06-12 Massimo Manghi <mxmanghi@apache.org>
    * Makefile.am: splitting install targets into 'make install' (mod_rivet.so,
    librivet.so,librivetparser.so + Tcl commands in rivet/rivet-tcl) and 
    'make install-packages' (whole content of rivet/packages), thus decoupling
    binary and non binary installs. Notice: 'make install' creates a fully
    functional install of Rivet in case packages such as 'form', 'session', 
    'DIO' aren't needed.
    * rivet/rivet-tcl/xml.tcl: Adding svn:keywords Id to svn properties
    * doc/xml/install.xml: updating manual to document the new installation command
    sequence
    